# Recreation-FNAF

./: .gitignore  CMakeLists.txt  README.md  game.bat
include/: Areas.hpp  Camera.hpp  ConsoleUtils.hpp  Enemy.hpp  Game.hpp  WallParser.hpp
src/: Camera.cpp  ConsoleUtils.cpp  Enemy.cpp  Game.cpp  WallParser.cpp  main.cpp
